--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Za ročno namestitev apk datotek je prvič potrebno nastaviti dovoljenje. Za And
 <p>Privzeto je prenešena karta prikazana v splošni (avto) vizualizaciji. Zgolj prvič je potrebno namestiti vizualizacijo z imenom Elevate 4, ki se nahaja na <a href="https://www.openandromaps.org/en/legend/elevate-mountain-hike-theme">povezavi</a>.
 Kliknite gumb "ORUX" za namestitev teme.  
 </p>
-<img src="slike\elevate.jpg" height="600">
+<img src="slike\elev.jpg" height="600">
 <p>Ko je namestitev teme dokončana v aplikaciji OruxMaps kliknite ikono za več možnosti (zgoraj levo tri črte) ter kliknite na "Mapsforge oblika karte". Prikažejo se tri teme - privzeta, elements in elevate. Izberite slednjo. V primeru, da teme niso vidne zaprite aplikacijo in jo zopet zaženite.</p>
 
 <h1>Druge karte?</h1>
