--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@ Za ročno namestitev apk datotek je prvič potrebno nastaviti dovoljenje. Za And
 
 <h1>Namestitev OpenAndroMaps kart</h1>
 
-<p>Imejte aktivno wifi povezavo zaradi zahtev OruxMaps aplikacije ter nato odprite spletno stran <a href="https://www.openandromaps.org/en/downloads/europe">OpenAndroMaps</a> in kliknite "+" pred Slovenia inc. Istria. Iz seznama izberite Install in Orux. Gumb sproži prenos karte v aplikacijo OruxMaps ter lahko traja do nekaj minut. Nova različica kart je na voljo na začetku vsakega meseca ter jih je potrebno namestiti ročno (po istem postopku). Na voljo so za ves svet. Vir podatkov je projekt <a href="https://www.openstreetmap.org/">OpenstreetMap </a>.
+<p>Imejte aktivno wifi povezavo zaradi zahtev OruxMaps aplikacije ter nato odprite spletno stran <a href="https://www.openandromaps.org/en/downloads/europe">OpenAndroMaps</a> in kliknite "+" pred Slovenia inc. Istria. Iz seznama izberite Install in Orux. Gumb sproži prenos karte v aplikacijo OruxMaps ter lahko traja do nekaj minut. <br>
+Po namestitvi je potrebno ročno osvežiti zbirko kart. To naredite s klikom na ikono Zemljevid (zgoraj desno) -> "Zamenjaj karto/Switch map". V novem oknu kliknite napis "Offline" in ikono za osvežitev (puščice v krogu). Med kartami se more pojaviti napis Slovenia (mapsforge).
+<br>
+Nova različica kart je na voljo na začetku vsakega meseca ter jih je potrebno namestiti ročno (po istem postopku). Na voljo so za ves svet. Vir podatkov je projekt <a href="https://www.openstreetmap.org/">OpenstreetMap </a>.
 </p>
 
 <h1>Namestitev OpenAndroMaps vizualizacije</h1>
 <p>Privzeto je prenešena karta prikazana v splošni (avto) vizualizaciji. Zgolj prvič je potrebno namestiti vizualizacijo z imenom Elevate 4, ki se nahaja na <a href="https://www.openandromaps.org/en/legend/elevate-mountain-hike-theme">povezavi</a>.
 Kliknite gumb "ORUX" za namestitev teme.  
 </p>
-<img src="slike\elev.jpg" height="600">
 <p>Ko je namestitev teme dokončana v aplikaciji OruxMaps kliknite ikono za več možnosti (zgoraj levo tri črte) ter kliknite na "Mapsforge oblika karte". Prikažejo se tri teme - privzeta, elements in elevate. Izberite slednjo. V primeru, da teme niso vidne zaprite aplikacijo in jo zopet zaženite.</p>
 
 <h1>Druge karte?</h1>
