--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <body>
 
+<p>Karta (digitalna ali papirnata) je pripomoček in ne slepa navigacija. Pri uporabi vedno uporabljate zdravo pamet in se ne podajajte v nevarne situacije</p>
 <h1>Namestitev OruxMaps</h1>
 
 <p>OruxMaps je na voljo brezplačno na spletni strani ali plačljivo v Google Play trgovini. Razlik med verzijama skoraj ni. Prenos brezplačne verzije je mogoč na povezavi <a href="https://www.oruxmaps.com/cs/en/more/downloads"> OruxMaps </a>. 
-Za ročno namestitev apk datotek je prvič potrebno nastaviti dovoljenje. Za Android verzije od 8.0 dalje se to naredi za aplikacijo, ki namešča apk - v našem primeru brskalnik. Po prenosu apk datoteke vas bo čarovnik opozoril, da tega ne morete narediti brez spremembe nastavitev ter vam hkrati ponudil bližnjico do sprememb nastavitev. Za pomoč uporabite <a href="https://www.expressvpn.com/support/vpn-setup/enable-apk-installs-android/">povezavo</a></p>.
+Za ročno namestitev apk datotek je prvič potrebno nastaviti dovoljenje. Za Android verzije od 8.0 dalje se to naredi za aplikacijo, ki namešča apk - v našem primeru brskalnik. Po prenosu apk datoteke vas bo čarovnik opozoril, da tega ne morete narediti brez spremembe nastavitev ter vam hkrati ponudil bližnjico do sprememb nastavitev. Za pomoč uporabite <a href="https://www.expressvpn.com/support/vpn-setup/enable-apk-installs-android/">povezavo</a>.</p>
 
 <h1>Namestitev OpenAndroMaps kart</h1>
 
