--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ h1 {
 
 <h1 align="center">OruxMaps in Locus</h1>
 <h3>Orux</h3>
-<p>OruxMaps je švicarski nož kartografije za Android naprave, nudi vse kar tudi ostali - prikaz kartografskih podlag brez povezave, beleženje točk in sledi ter prikaz/uvoz poti. Je popolnoma prilagodljiv tako za pohodnike kot kolesarje ter ostale športe na tleh in v zraku. Ena izmed njegovih prednosti je prilagodljiva plošča na kateri sami izberemo koliko meritev/podatkov želimo videti. Na voljo so vse od razdalje, višine, ure zahoda kot povezava z merilcem srčnega utripa ali številne statistične analize aktivnosti. Oruxa nima trgovine kart za "one-click-purchase", vanj lahko uvozimo karkoli želimo - tudi spletne karte, kjer sami izbiramo območja brez povezave. S prenosom višinskih podatkov lahko vsak zemljevid prikažemo v 3D, s pomočjo izračuna poti v drugih aplikacijah (npr. Google maps) uvozi in prikazuje traso, itd. Ker nudi toliko je tudi vmesnik svojevrsten ampak ko ga osvojimo nam zleze pod kožo. Nudi tudi odčitavanje koordinat v različnih zapisih. Ni potrebna registracija, ne naročnina, nima trgovin, galerij, itd. Zgolj lastne karte. 
+<p>OruxMaps je že desetletje švicarski nož kartografije za Android naprave in je oral ledino večine funkcionalnosti, ki jih imajo sedaj tudi "veliki" - prikaz kartografskih podlag brez povezave, beleženje točk in sledi ter prikaz/uvoz poti. Je popolnoma prilagodljiv tako za pohodnike kot kolesarje ter ostale športe na tleh in v zraku. Ena izmed njegovih prednosti je prilagodljiva plošča na kateri sami izberemo koliko meritev/podatkov želimo videti. Na voljo so vse od razdalje, višine, ure zahoda kot povezava z merilcem srčnega utripa ali številne statistične analize aktivnosti. Oruxa nima trgovine kart za "one-click-purchase", vanj lahko uvozimo karkoli želimo - tudi spletne karte, kjer sami izbiramo območja brez povezave. S prenosom višinskih podatkov lahko vsak zemljevid prikažemo v 3D, s pomočjo izračuna poti v drugih aplikacijah (npr. Google maps) uvozi in prikazuje traso, itd. Ker nudi toliko je tudi vmesnik svojevrsten ampak ko ga osvojimo nam zleze pod kožo. Nudi tudi odčitavanje koordinat v različnih zapisih. Ni potrebna registracija, ne naročnina, nima trgovin, galerij, itd. Zgolj lastne karte. 
 </p>
 <img src="slike\azimut.jpg" height="600">
 <h5 >Predvsem pa nudi najbolj pomembno - prikaz lokacije in hitro analizo oddaljenosti in azimuta do željene točke. Brez navigacije. Od stojišča pri Koči pri Krnskih jezerih do sedla je 830m in azimut 339 stopinj.</h5>
@@ -102,8 +102,6 @@ Kliknite gumb "ORUX/LOCUS" za namestitev.
 <p>Opomba: zgolj za namene predstavitve. Avtor je <a href="https://sidarta.si/en/product/bohinj-125-000_en/">izdelek kupil </a>v papirnati obliki v uradni trgovini založnika. Sidarta na žalost še ne trži lastnih digitalnih izdelkov.</p>
 
 <br>
-
-
 
 <h1>Apple IOS?</h1>
 <p>Dober nadomestek aplikacije OruxMaps je Cartograph 2 maps <a href="https://apps.apple.com/us/app/cartograph-2-maps/id1082995961"> Link </a>. Tudi vanjo lahko nameščamo mbtiles zemljevide po enakem postopku. </p>
