--- a/index.html
+++ b/index.html
@@ -41,16 +41,11 @@ h1 {
 </p>
 <img src="slike\azimut.jpg" height="600">
 <h5 >Predvsem pa nudi najbolj pomembno - prikaz lokacije in hitro analizo oddaljenosti in azimuta do željene točke. Brez navigacije in klikanja, zgolj s premikom karte izvemo razdaljo od stojišča pri Koči pri Krnskih jezerih do sedla je 830m in smer 339 stopinj.</h5>
-Po krivici se ga drži prekletstvo "težavne" namestitve, saj ga je možno namestiti z enim klikom.
+Po krivici se ga drži prekletstvo "težavne" namestitve.
 <br>
-V nadaljevanju bo predstavljeno:</p>
-<ul>
-	<li>Namestitev aplikacije</li>
-	<li>Uvoz kart</li>
-	<li>(po potrebi) Uvoz vizualizacije</li>
-</ul>
+
 <h3>Locus</h3>
-<p>Locus je proizvod podjetja in ne posameznika. Nudi podobne funkcionalnosti, a za višjo ceno ter z nakupi v aplikaciji. Za uporabnika, ki želi <b>tudi</b> rastrske PZS zemljevide je med boljšimi izbirami. Locus v svoji trgovini nudi tudi druge ponudnike - Kompass, Freytag and Berndt, itd. Največja prednost pred OruxMaps je ravno v integraciji proizvajalcev kart, ki svojih izdelkov ne nudijo samostojno. Uporabnik je zato "prisiljen" uporabljati aplikacijo, ki jo sicer mogoče ne bi.</p>
+<p>Locus je proizvod podjetja in ne posameznika. Nudi podobne funkcionalnosti, a za višjo ceno ter z nakupi v aplikaciji. Za uporabnika, ki želi <b>tudi</b> rastrske PZS zemljevide je med boljšimi izbirami. Locus v svoji trgovini ponuja še več kart proizvajalcev Kompass, Freytag and Berndt, itd. Največja prednost pred OruxMaps je ravno v integraciji proizvajalcev, ki svojih izdelkov zato ne nudijo samostojno. Uporabnik je s tem "prisiljen" uporabljati aplikacijo, ki jo sicer mogoče ne bi.</p>
 
 <h2>Namestitev OruxMaps/Locus</h2>
 <p><b>Google Play trgovina</b></p>
