--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Po krivici se ga drži prekletstvo "težavne" namestitve.
 Korak 1: Prenos brezplačne verzije <a href="https://www.oruxmaps.com/cs/en/more/downloads"> OruxMaps</a> in zagon apk datoteke po prenosu. 
 <br>
 Korak 2: (odvisno od telefona ter potrebno le enkrat):
-Za ročno namestitev apk datotek je potrebno nastaviti dovoljenje. Za Android verzije od 8.0 dalje se to naredi za aplikacijo, ki namešča apk - v našem primeru brskalnik. Za pomoč uporabite <a href="https://www.expressvpn.com/support/vpn-setup/enable-apk-installs-android/">povezavo</a>.<br>
+Ročna namestitev datotek potrebuje ustrezno dovoljenje. Za Android verzije od 8.0 dalje se to naredi za aplikacijo, ki namešča apk - v našem primeru brskalnik. Za pomoč uporabite <a href="https://www.expressvpn.com/support/vpn-setup/enable-apk-installs-android/">povezavo</a>.<br>
 Korak 3: Ga ni. Orux je nameščen.</p>
 
 <h2>Namestitev kartografske podlage</h2>
