--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@ h1 {
   font-family: verdana;
   
 }
-
+div {
+	padding: 15px;
+}
 </style>
 </head>
 <body>
 <br>
-
+<div>
 <p style="color: red" align="center"><i><b>Karta (digitalna ali papirnata) je pripomoček in ne slepa navigacija. Pri uporabi vedno uporabljate zdravo pamet in se ne podajajte v nevarne situacije.</b></i></p>
 
 <h1 align="center">Planinske aplikacije</h1>
@@ -106,5 +108,6 @@ Več o uporabljeni simbologiji Elevate 4 je dosegljivo v <a href="https://www.op
 
 <br>
 <p>@Grega Žorž (gregazorz@gmail.com)</p>
+</div>
 </body>
 </html>
