--- a/index.html
+++ b/index.html
@@ -20,30 +20,24 @@ div {
 <p style="color: red" align="center"><i><b>Karta (digitalna ali papirnata) je pripomoček in ne slepa navigacija. Pri uporabi vedno uporabljate zdravo pamet in se ne podajajte v nevarne situacije.</b></i></p>
 
 <h1 align="center">Planinske aplikacije</h1>
-<p>Planinskih/outdoor/aktivnih aplikacij je danes malo morje in jih lahko razdelimo v skupine:
-<ul>
-	<li>posredniki zemljevidov</li>
-	<li>ponudniki (izdelovalci) zemljevidov</li>
-	<li>aplikacije, ki nudijo tematske vsebine izletov</li>
-</ul></p>
-
+<p>Planinskih/outdoor/aktivnih aplikacij je danes malo morje. <br>
 <p>Ali obstaja možnost navigacije po planinskih poteh? Da. Vendar jo večina planinskih organizacij odsvetuje. Nekatere aplikacije vseeno nudijo funkcijo načrtovanja in izračuna poti med točko A in B na zemljevidu. Ena izmed takšnih je npr. plačljivi Outdooractive (bivši View Ranger).</p>
 
 
 <h3>PZS in podatki</h3>
 <p>Planinska zveza Slovenije pri nas vodi evidenco <b>uradnih</b> planinskih poti ter prodaja papirnate in digitalne planinske zemljevide. V digitalni sferi so njihovi izdelki najbolje integrirani v aplikacije Locus in Avenza.</p>
-<p>Seveda je virov kartografskih podatkov več, ena izmed takšnih baz je OpenStreetMap, ki je zaradi načela odprokodnosti in odprtih podatkov dostopen vsem - zastonj. Ravno zaradi tega je osnovni vir praktično vseh plačljivih aplikacij in njihovih kartografskih produktov. V OSM so že vključeni tudi državni prostorski podatki - npr. sloj Rabe tal MKGP.</p> 
-<p>Nekateri ponudniki njihove podatke oplementijo z lastnimi ali drugimi bazami - npr. plačljivi Koomot, spet drugi stavijo vse na galerijo poti/izletov, ki jih nalagajo uporabniki. Npr. Bergfex.</p>
+<p>Seveda je virov kartografskih podlag več, ena izmed takšnih baz je OpenStreetMap, ki je zaradi načela odprokodnosti in odprtih podatkov dostopen vsem - zastonj. Ravno zaradi tega je osnovni vir praktično vseh, plačljivih in brezplačnih aplikacij. V OSM so že vključeni tudi nekateri državni podatki - sloj Rabe tal MKGP.</p> 
+<p>Nekateri ponudniki njihove podatke oplementijo tudi lastnimi ali drugimi bazami - npr. plačljivi Koomot z vremenskimi podatki, spet drugi stavijo na galerijo poti/izletov, ki jih nalagajo uporabniki. Npr. Bergfex.</p>
 
-<p>En izmed redkih proizvajalcev kart, ki ima lastno aplikacijo je italijanski <a href="https://www.tabaccoeditrice.it/">Tabacco</a>. Znan je predvsem po Dolomitih, Karnijskih in Julijskih Alpah. 
+<p>En izmed redkih proizvajalcev kart, ki ima lastno aplikacijo je italijanski <a href="https://www.tabaccoeditrice.it/">Tabacco</a>. Znan je predvsem po kartah Dolomitov ter Karnijskih in Julijskih Alp. 
 
 <h1 align="center">OruxMaps in Locus</h1>
 <h3>Orux</h3>
-<p>OruxMaps je že desetletje švicarski nož kartografije za Android naprave in je oral ledino večine funkcionalnosti, ki jih imajo sedaj tudi "veliki" - prikaz kartografskih podlag brez povezave, beleženje točk in sledi ter prikaz/uvoz poti. Je popolnoma prilagodljiv tako za pohodnike kot kolesarje ter ostale športe na tleh in v zraku. Ena izmed njegovih prednosti je prilagodljiva plošča na kateri sami izberemo koliko meritev/podatkov želimo videti. Na voljo so vse od razdalje, višine, ure zahoda kot povezava z merilcem srčnega utripa ali številne statistične analize aktivnosti. Orux nima trgovine kart za "one-click-purchase", vanj lahko uvozimo karkoli želimo - tudi spletne karte, kjer sami izbiramo območja brez povezave. S prenosom višinskih podatkov lahko vsak zemljevid prikažemo v 3D, s pomočjo izračuna poti v drugih aplikacijah (npr. Google maps) Orux uvozi in prikazuje traso, itd. Nudi tudi odčitavanje koordinat v različnih zapisih. Ni potrebna registracija, ne naročnina, nima trgovin, galerij, itd. Zgolj lastne karte. 
+<p>OruxMaps je že desetletje švicarski nož kartografije za Android naprave in je oral ledino večine funkcionalnosti, ki jih imajo sedaj tudi "veliki" ponudniki - prikaz kartografskih podlag brez povezave, beleženje točk in sledi ter prikaz/uvoz poti. Je popolnoma prilagodljiv tako za pohodnike kot kolesarje ter ostale športe na tleh in v zraku. Ena izmed njegovih prednosti je plošča na kateri sami izberemo koliko meritev/podatkov želimo videti. Orux nima trgovine kart za "one-click-purchase", vanj lahko uvozimo karkoli želimo - tudi spletne karte, kjer sami izbiramo območja brez povezave. S prenosom višinskih podatkov lahko vsak zemljevid prikažemo v 3D, s pomočjo izračuna poti v drugih aplikacijah (npr. Google maps) Orux uvozi in prikazuje traso, itd. Nudi tudi odčitavanje koordinat v različnih zapisih. <br>
+Skratka...Ni potrebna registracija, ne naročnina, nima trgovin, galerij, zbirk, zbiranja podatkov, reklam, itd. 
 </p>
 <img src="slike\azimut.jpg" height="600">
-<h5 >Predvsem pa nudi najbolj pomembno - prikaz lokacije in hitro analizo oddaljenosti in azimuta do željene točke. Brez navigacije in klikanja, zgolj s premikom karte izvemo razdaljo od stojišča pri Koči pri Krnskih jezerih do sedla je 830m in smer 339 stopinj.</h5>
-Po krivici se ga drži prekletstvo "težavne" namestitve.
+<h5 >Predvsem pa nudi najbolj pomembno - prikaz lokacije in hitro analizo oddaljenosti in azimuta do željene točke. Brez navigacije in klikanja, zgolj s premikom karte izvemo razdaljo od stojišča pri Koči pri Krnskih jezerih do izbrane lokacije - 830m in smer 339 stopinj.</h5>
 <br>
 
 <h3>Locus</h3>
@@ -51,7 +45,7 @@ Po krivici se ga drži prekletstvo "težavne" namestitve.
 
 <h2>Namestitev OruxMaps/Locus</h2>
 <p><b>Google Play trgovina</b></p>
-<p>OruxMaps je na voljo v <a href="https://play.google.com/store/apps/details?id=com.orux.oruxmapsDonate">Google Play trgovini</a> in stane 4.29€. To je to. Namestitev z enim klikom. Z nakupom podpremo avtorja aplikacije. <br>Locus je v Google Play na voljo brezplačno (a prikazuje reklame) ali v <a href="https://play.google.com/store/apps/details?id=menion.android.locus.pro">plačljivi verziji</a> za 7.89€ (ter nakupi zemljevidov v aplikaciji).
+<p>Po krivici se ga drži prekletstvo "težavne" namestitve, saj je na voljo v <a href="https://play.google.com/store/apps/details?id=com.orux.oruxmapsDonate">Google Play trgovini</a> in stane 4.29€. To je to. Namestitev z enim klikom. Z nakupom podpremo avtorja aplikacije. <br>Locus je v Google Play na voljo brezplačno (a prikazuje reklame) ali v <a href="https://play.google.com/store/apps/details?id=menion.android.locus.pro">plačljivi verziji</a> za 7.89€ (ter nakupi zemljevidov v aplikaciji).
 </p>
 
 <p><b>Brezplačna namestitev</b></p>
@@ -66,6 +60,7 @@ Korak 3: Ga ni. Orux je nameščen.</p>
 <p>Orux privzeto nima nameščene nobene karte in za prikaz uporablja spletni vir OpenStreetMap. Cilj tega "priročnika" je namestitev zemljevidov projekta OpenAndroMaps. Postopek je enak za Locus in Orux.</p>
 
 <p>Imejte aktivno wifi povezavo zaradi zahtev OruxMaps aplikacije ter odprite spletno stran <a href="https://www.openandromaps.org/en/downloads/europe">OpenAndroMaps</a> in kliknite "+" pred Slovenia inc. Istria. 
+<img src="slike\andro.jpg" height="600">
 <br>Iz seznama izberite Install in Orux/Locus. Gumb sproži prenos karte v aplikacijo ter lahko traja do nekaj minut (OpenAndroMaps je projekt skupine prostovoljcev, ki sami krijejo stroške strežnikov zato jim ne moremo zameriti hitrosti prenosa). 
 <br>
 ORUX: Po namestitvi je potrebno ročno osvežiti zbirko kart. To naredite s klikom na ikono Zemljevid (zgoraj desno) -> "Zamenjaj karto/Switch map". V novem oknu kliknite napis "Offline" in ikono za osvežitev (puščice v krogu). Med kartami se more pojaviti napis Slovenia (mapsforge).
