--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Korak 3: Ga ni. Orux je nameščen.</p>
 <p>Orux privzeto nima nameščene nobene karte in za prikaz uporablja spletni vir OpenStreetMap. Cilj tega "priročnika" je namestitev zemljevidov projekta OpenAndroMaps. Postopek je enak za Locus in Orux.</p>
 
 <p>Imejte aktivno wifi povezavo zaradi zahtev OruxMaps aplikacije ter odprite spletno stran <a href="https://www.openandromaps.org/en/downloads/europe">OpenAndroMaps</a> in kliknite "+" pred Slovenia inc. Istria. 
-<img src="slike\andro.jpg" height="600">
+<img align="left" src="slike\andro.jpg" height="600">
 <br>Iz seznama izberite Install in Orux/Locus. Gumb sproži prenos karte v aplikacijo ter lahko traja do nekaj minut (OpenAndroMaps je projekt skupine prostovoljcev, ki sami krijejo stroške strežnikov zato jim ne moremo zameriti hitrosti prenosa). 
 <br>
 ORUX: Po namestitvi je potrebno ročno osvežiti zbirko kart. To naredite s klikom na ikono Zemljevid (zgoraj desno) -> "Zamenjaj karto/Switch map". V novem oknu kliknite napis "Offline" in ikono za osvežitev (puščice v krogu). Med kartami se more pojaviti napis Slovenia (mapsforge).
