--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@ div {
 <br>
 <p style="color: red" align="center"><i><b>Karta (digitalna ali papirnata) je pripomoček in ne slepa navigacija. Pri uporabi vedno uporabljate zdravo pamet in se ne podajajte v nevarne situacije.</b></i></p>
 
-<p>Planinskih/outdoor/aktivnih aplikacij je danes malo morje. <br>
-<p>Ali obstaja možnost navigacije po planinskih poteh? Da. Vendar jo večina planinskih organizacij odsvetuje. Nekatere aplikacije vseeno nudijo funkcijo načrtovanja in izračuna poti med točko A in B na zemljevidu. Ena izmed takšnih je npr. plačljivi Outdooractive (bivši View Ranger).</p>
-
+<p>Planinskih/outdoor/aktivnih aplikacij je danes malo morje zato je odločitev o izbiri kar težka. Sploh, če je aplikacija plačljiva. <br>
 
 <h3>PZS in podatki</h3>
 <p>Planinska zveza Slovenije pri nas vodi evidenco <b>uradnih</b> planinskih poti ter prodaja papirnate in digitalne planinske zemljevide. V digitalni sferi so njihovi izdelki najbolje integrirani v aplikacije Locus in Avenza.</p>
 <p>Seveda je virov kartografskih podlag več, ena izmed takšnih baz je OpenStreetMap, ki je zaradi načela odprokodnosti in odprtih podatkov dostopen vsem - zastonj. Ravno zaradi tega je osnovni vir praktično vseh, plačljivih in brezplačnih aplikacij. V OSM so že vključeni tudi nekateri državni podatki - sloj Rabe tal MKGP.</p> 
 <p>Nekateri ponudniki njihove podatke oplementijo tudi lastnimi ali drugimi bazami - npr. plačljivi Koomot z vremenskimi podatki, spet drugi stavijo na galerijo poti/izletov, ki jih nalagajo uporabniki. Npr. Bergfex.</p>
+
+<p>Ali obstaja možnost navigacije po planinskih poteh? Da. Vendar jo večina planinskih organizacij odsvetuje. Nekatere aplikacije vseeno nudijo funkcijo načrtovanja in izračuna poti med točko A in B na zemljevidu. Ena izmed takšnih je npr. plačljivi Outdooractive (bivši View Ranger).</p>
 
 <p>En izmed redkih proizvajalcev kart, ki ima lastno aplikacijo je italijanski <a href="https://www.tabaccoeditrice.it/">Tabacco</a>. Znan je predvsem po kartah Dolomitov ter Karnijskih in Julijskih Alp. 
 
