--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Skratka...Ni potrebna registracija, ne naročnina, nima trgovin, galerij, zbirk,
 <br>
 
 <h3>Locus</h3>
-<p>Locus je proizvod podjetja in ne posameznika. Nudi podobne funkcionalnosti, a za višjo ceno ter z nakupi v aplikaciji. Za uporabnika, ki želi <b>tudi</b> rastrske PZS zemljevide je med boljšimi izbirami. Locus v svoji trgovini ponuja še več kart proizvajalcev Kompass, Freytag and Berndt, itd. Največja prednost pred OruxMaps je ravno v integraciji proizvajalcev, ki svojih izdelkov zato ne nudijo samostojno. Uporabnik je s tem "prisiljen" uporabljati aplikacijo, ki jo sicer mogoče ne bi.</p>
+<p>Locus je proizvod podjetja in ne posameznika. Nudi podobne funkcionalnosti, a za višjo ceno ter z nakupi v aplikaciji. Za uporabnika, ki želi <b>tudi</b> rastrske PZS zemljevide je med boljšimi izbirami. Locus v svoji trgovini ponuja še več kart proizvajalcev Kompass, Freytag and Berndt, itd. Največja prednost pred OruxMaps je ravno v integraciji proizvajalcev, ki svojih izdelkov ne nudijo samostojno. Uporabnik je s tem "prisiljen" uporabljati aplikacijo, ki jo sicer mogoče ne bi.</p>
 
 <h2>Namestitev OruxMaps/Locus</h2>
 <p><b>Google Play trgovina</b></p>
@@ -92,10 +92,9 @@ Več o uporabljeni simbologiji Elevate 4 je dosegljivo v <a href="https://www.op
 </p>
 
 <img src="slike\krn.jpg" height="600">
-<p>Območje Krna. Poti so prikazane glede na kategorijo težavnosti in ohranjenosti. OSM projekt uporablja švicarske <a href="https://www.bergfreunde.eu/alpine-grades-calculator/">SAC kategorije</a>. </p>
+<p>Rezultat: območje Krna. Poti so prikazane glede na kategorijo težavnosti in ohranjenosti. OSM projekt uporablja švicarske <a href="https://www.bergfreunde.eu/alpine-grades-calculator/">SAC kategorije</a>. </p>
 <h3>Delo z Oruxmaps</h3>
-<p>Ima svoje prednosti in slabosti. Vsekakor je slabost velika količina funkcionalnosti, saj ponavadi ne potrebujemo vsega. Za uporabnike, ki želijo z drugih spletnih strani prenašati GPX poti ali ideje za izlete je zopet slaba novica, da morate GPX najprej pretvoriti v KML ter datoteko na roke prekopirati v mapo orux/overlay. Končni rezultat je enak kot pri ostalih aplikacijah.</p>
-<p>Dobra novica je predvsem, da je na spletu dovolj priročnikov, debat in filmov o uporabi programa. Aja. Uporabniki si lahko med seboj delijo lokacijo. </p>
+<p>Ima svoje prednosti in slabosti. Dobra novica je predvsem, da je na spletu dovolj priročnikov, debat in filmov o uporabi programa. Želite uvoziti GPX? Kliknite ikono "cesta" in naložite GPX. Kaj pa KML? Brez težav ampak najprej ga morate prekopirati v mapo oruxmaps\overlay ter nato v orodjih karte aktivirati nalaganje slojev. Malenkosti, ki vseeno zahtevajo čas za odkrivanje. </p>
 <h1>Druge karte?</h1>
 <p>Rastrske PZS karte lahko najlažje kupite in uvozite v Locus aplikaciji. Za Orux te možnosti uradno ni, saj PZS ne prodaja samostojnega digitalnega izdelka izven Locus/Avenza trgovine. Več na uradni strani <a href="https://www.pzs.si/novice.php?pid=11929">PZS in Locus</a>.</p>
 <p>Orux podpira ročni uvoz, priporočljiv je format mbtiles v katerem so lahko spravljene tako vektorske kot rastrske (papirnate) karte - npr. GURS zemljevidov v merilu 1:50.000. 
