--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ div {
 </head>
 <body>
 
-<img src="slike\naslovna.jpg" height="600" class="center">
+
 <br>
 <div>
 
@@ -38,12 +38,13 @@ div {
 <p>Nekateri ponudniki njihove podatke oplementijo tudi lastnimi ali drugimi bazami - npr. plačljivi Koomot z vremenskimi podatki, spet drugi stavijo na galerijo poti/izletov, ki jih nalagajo uporabniki. Npr. Bergfex.</p>
 
 <p>Ali obstaja možnost navigacije po planinskih poteh? Da. Vendar jo večina planinskih organizacij odsvetuje. Nekatere aplikacije vseeno nudijo funkcijo načrtovanja in izračuna poti med točko A in B na zemljevidu. Ena izmed takšnih je npr. plačljivi Outdooractive (bivši View Ranger).</p>
+<p>Velika večina navedenih aplikacij je zmes vsega in so razlike predvsem v dojemanju uporabniške izkušnje ter države, ki jih aplikacija "favorizira" z vsebino.</p>
 
 <p>En izmed redkih proizvajalcev kart, ki ima lastno aplikacijo je italijanski <a href="https://www.tabaccoeditrice.it/">Tabacco</a>. Znan je predvsem po kartah Dolomitov ter Karnijskih in Julijskih Alp. 
 
-<h1 align="center">OruxMaps in Locus</h1>
+<h1 align="center">OruxMaps, Locus in Cartograph 2 maps</h1>
 <h3>Orux</h3>
-<p>OruxMaps je že desetletje švicarski nož kartografije za Android naprave in je oral ledino večine funkcionalnosti, ki jih imajo sedaj tudi "veliki" ponudniki - prikaz kartografskih podlag brez povezave, beleženje točk in sledi ter prikaz/uvoz poti. Je popolnoma prilagodljiv tako za pohodnike kot kolesarje ter ostale športe na tleh in v zraku. Ena izmed njegovih prednosti je plošča na kateri sami izberemo koliko meritev/podatkov želimo videti. Orux nima trgovine kart za "one-click-purchase", vanj lahko uvozimo karkoli želimo - tudi spletne karte, kjer sami izbiramo območja brez povezave. S prenosom višinskih podatkov lahko vsak zemljevid prikažemo v 3D, s pomočjo izračuna poti v drugih aplikacijah (npr. Google maps) Orux uvozi in prikazuje traso, itd. Nudi tudi odčitavanje koordinat v različnih zapisih. <br>
+<p>OruxMaps je že desetletje švicarski nož kartografije za Android naprave in je oral ledino večine funkcionalnosti, ki jih imajo sedaj tudi "veliki" ponudniki - prikaz kartografskih podlag brez povezave, beleženje točk, beleženje točk s slikami in sledi ter prikaz/uvoz poti. Je popolnoma prilagodljiv tako za pohodnike kot kolesarje ter ostale športe na tleh in v zraku. Ena izmed njegovih prednosti je plošča na kateri sami izberemo koliko meritev/podatkov želimo videti. Orux nima trgovine kart za "one-click-purchase", vanj lahko uvozimo karkoli želimo - tudi spletne karte, kjer sami izbiramo območja brez povezave. S prenosom višinskih podatkov lahko vsak zemljevid prikažemo v 3D, s pomočjo izračuna poti v drugih aplikacijah (npr. Google maps) Orux uvozi in prikazuje traso, itd. Nudi tudi odčitavanje koordinat v različnih zapisih. <br>
 Skratka...Ni potrebna registracija, ne naročnina, nima trgovin, galerij, zbirk, zbiranja podatkov, reklam, itd. 
 </p>
 <img src="slike\azimut.jpg" height="600">
@@ -52,6 +53,9 @@ Skratka...Ni potrebna registracija, ne naročnina, nima trgovin, galerij, zbirk,
 
 <h3>Locus</h3>
 <p>Locus je proizvod podjetja in ne posameznika. Nudi podobne funkcionalnosti, a za višjo ceno ter z nakupi v aplikaciji. Za uporabnika, ki želi <b>tudi</b> rastrske PZS zemljevide je med boljšimi izbirami. Locus v svoji trgovini ponuja še več kart proizvajalcev Kompass, Freytag and Berndt, itd. Največja prednost pred OruxMaps je ravno v integraciji proizvajalcev, ki svojih izdelkov ne nudijo samostojno. Uporabnik je s tem "prisiljen" uporabljati aplikacijo, ki jo sicer mogoče ne bi.</p>
+
+<h3>Apple IOS?</h3>
+<p>Dober nadomestek aplikacije OruxMaps je Cartograph 2 maps <a href="https://apps.apple.com/us/app/cartograph-2-maps/id1082995961"> Link </a>. Tudi vanjo lahko nameščamo mbtiles zemljevide po enakem postopku. </p>
 
 <h2>Namestitev OruxMaps/Locus</h2>
 <p><b>Google Play trgovina</b></p>
@@ -104,15 +108,31 @@ Več o uporabljeni simbologiji Elevate 4 je dosegljivo v <a href="https://www.op
 <p>Datoteko (3.5gb) shranite v mapo Oruxmaps/mapfiles/ ter osvežite seznam kart brez povezave. Veselo uporabo.</p>
 
 <h2>Skenirane karte</h2>
-<p>Mogoč je tudi uvoz skeniranih papirnatih kart (če so umeščene v prostor/opremljene s koordinatami). S tem lahko v življenje spravite vse vaše kupljene papirnate karte. Kako? Z nekaj mukotrpnega dela s skenerjem in v programu QGIS. Primer: </p>
+<p>Mogoč je tudi uvoz skeniranih papirnatih kart (če so umeščene v prostor/opremljene s koordinatami). S tem lahko v digitalno življenje spravite vse vaše kupljene papirnate karte. Kako? Z nekaj mukotrpnega dela s skenerjem in v programu QGIS. Primer: </p>
 <img src="slike\sidarta.jpg" height="600">
 
 <p>Opomba: zgolj za namene predstavitve. Avtor je <a href="https://sidarta.si/en/product/bohinj-125-000_en/">izdelek kupil </a>v papirnati obliki v uradni trgovini založnika. Sidarta na žalost še ne trži lastnih digitalnih izdelkov.</p>
 
 <br>
+<h1>Primerjava</h1>
+<h3>maPZS</h3>
+<p>PZS poleg kart nudi tudi spletni pregledovalnik, ki ga lahko shranimo na telefon ter prenašamo zemljevide brez povezave. Natančnost in številčnost informacij je trenutno slabša.</p>
+<img src="slike\mapzs.jpg" height="600">
 
-<h1>Apple IOS?</h1>
-<p>Dober nadomestek aplikacije OruxMaps je Cartograph 2 maps <a href="https://apps.apple.com/us/app/cartograph-2-maps/id1082995961"> Link </a>. Tudi vanjo lahko nameščamo mbtiles zemljevide po enakem postopku. </p>
+<h3>Maps.me</h3>
+<p>Še en derivat OpenStreetMap. Hiter in enostaven, resnično škoda, da vse poti prikazuje enako. Na sliki so mulatjera Zadnjica - Luknja, zahtevna pot preko Plemenic in ozka pot na Bovški Gamsovec.</p>
+<img src="slike\mapsme.jpg" height="600">
+<h3>Outdooractive</h3>
+<p>Kaj pa Outdooractive? Trenutno verjetno najbolj priročna plačljiva aplikacija za načrtovanje aktivnosti (30€ na leto). Njihova karta je derivat iz OpenStreetMap podatkov, kar pomeni, da imamo v Oruxu iste podatke - zastonj. Njihov plan temelji na načrtovanju (višinski profili, izračun poti med točko A in B), itd. Za 60€ letno vam nudijo še dostop do kart planinskih organizacij OAV, DAV, KOMPASS, ADFC, Harvey ampak ne PZS.</p>
+<p>Velika prednost Slovenije je spletna stran Hribi.net, kjer brezplačno domujejo opisi poti, slike in trase. Povsem samostojno imamo tako na razpolago bogato zbirko informacij brez, da bi se rabili zavezati določeni aplikaciji. </p>
+<p>Slabost? Outdooractive in podobni so z leti res dobro razvili sistem načrtovanja aktivnosti. </p>
+
+<h3>Tabacco</h3>
+
+<p>Ena izmed redkih kartografskih hiš z lastno aplikacijo za nakup in uporabo njihovih digitalnih kart. Za razliko od PZS prodajajo kvadrante.</p>
+<img src="slike\tabacco.jpg" height="600">
+
+
 
 <br>
 <p>@Grega Žorž (gregazorz@gmail.com)</p>
