--- a/index.html
+++ b/index.html
@@ -30,29 +30,34 @@ div {
 <br>
 <p style="color: red" align="center"><i><b>Karta (digitalna ali papirnata) je pripomoček in ne slepa navigacija. Pri uporabi vedno uporabljate zdravo pamet in se ne podajajte v nevarne situacije.</b></i></p>
 
-<p>Planinskih/outdoor/aktivnih aplikacij je danes malo morje zato je odločitev o izbiri kar težka. Sploh, če je aplikacija plačljiva. <br>
+<p>Planinskih/outdoor/aktivnih aplikacij je danes malo morje zato je odločitev o izbiri kar težka. Sploh, če je aplikacija plačljiva na mesečni ravni. Spodnji zapis je nastal na podlagi izkušenj zadnjega desetletja, predvsem z namenom kartiranja in uporabe lastnih zemljevidov v času, ko aplikacije še niso bile tako razvite kot danes. Posameznik lahko testira le nekaj aplikacij, zato tu vsekakor niso zbrane vse ali celo enakovredno predstavljene.<br>
 
 <h3>PZS in podatki</h3>
 <p>Planinska zveza Slovenije pri nas vodi evidenco <b>uradnih</b> planinskih poti ter prodaja papirnate in digitalne planinske zemljevide. V digitalni sferi so njihovi izdelki najbolje integrirani v aplikacije Locus in Avenza.</p>
-<p>Seveda je virov kartografskih podlag več, ena izmed takšnih baz je OpenStreetMap, ki je zaradi načela odprokodnosti in odprtih podatkov dostopen vsem - zastonj. Ravno zaradi tega je osnovni vir praktično vseh, plačljivih in brezplačnih aplikacij. V OSM so že vključeni tudi nekateri državni podatki - sloj Rabe tal MKGP.</p> 
-<p>Nekateri ponudniki njihove podatke oplementijo tudi lastnimi ali drugimi bazami - npr. plačljivi Koomot z vremenskimi podatki, spet drugi stavijo na galerijo poti/izletov, ki jih nalagajo uporabniki. Npr. Bergfex.</p>
+<p>Seveda je virov kartografskih podlag več, ena izmed takšnih baz je OpenStreetMap, ki je zaradi načela odprokodnosti in odprtih podatkov dostopen vsem - zastonj. Ravno zaradi tega je osnovni vir praktično vseh, plačljivih in brezplačnih aplikacij. OSM urejajo prostovoljci, ki zgolj sledijo smernicam kako morajo biti podarki vrisani in urejeni. Predvsem je pomembna ena stvar - več prostovoljcev, ki bo (kvalitetno) urejalo OSM zbirko <b>boljši bodo podatki v vseh aplikacijah.</b> Tudi pot na Triglav je moral nekdo vrisati in s pojavom lidar posnetkov je to že stvar natančnosti pol metra ali manj.</p> 
+<p>Nekateri ponudniki njihove podatke oplementijo tudi lastnimi ali drugimi bazami - npr. z vremenskimi podatki, spet drugi stavijo na galerijo poti/izletov, ki jih nalagajo uporabniki. </p>
 
-<p>Ali obstaja možnost navigacije po planinskih poteh? Da. Vendar jo večina planinskih organizacij odsvetuje. Nekatere aplikacije vseeno nudijo funkcijo načrtovanja in izračuna poti med točko A in B na zemljevidu. Ena izmed takšnih je npr. plačljivi Outdooractive (bivši View Ranger).</p>
-<p>Velika večina navedenih aplikacij je zmes vsega in so razlike predvsem v dojemanju uporabniške izkušnje ter države, ki jih aplikacija "favorizira" z vsebino.</p>
+<p>Ali obstaja možnost navigacije po planinskih poteh? Da. Vendar jo večina planinskih organizacij odsvetuje pri uporabi na terenu. Skoraj vse aplikacije nudijo funkcijo načrtovanja in izračuna poti med točko A in B na zemljevidu. Dodana vrednost je 3d profil.</p>
+<p>Velika večina aplikacij je zmes vsega in so razlike predvsem v dojemanju uporabniške izkušnje ter države, ki jih aplikacija "favorizira" z vsebino. Nove aplikacije želijo uporabnike pritegniti predvsem z povezljivostjo, načrtovanjem, iskanjem tur, nekaj v smislu "prodajaj aktivni življenski slog, ne kartografske aplikacije"...skratka piko na i, ki jo seveda računajo. Zaradi lažje primerjave se bomo osredotočili predvsem na to, kar (zelo subjektivno) pomeni največ - karta, orodja, ki olajšajo naše odločitve na terenu ter potešijo radovednost glede imena vrhov in oddaljenosti do naslednje točke. Pri tem je potrebno omeniti, da nikoli ne beležim prehojene poti/aktivnosti s telefonom. Baterija je v gorskem svetu preveč dragocena in powerbank v nahrbtniku (polega papirnate karte) je le rezerva. Beleženje, če že mora biti, je (pri meni) stvar pametne ure, saj ni škode, če ji zmanjka energije.</p>
 
-<p>En izmed redkih proizvajalcev kart, ki ima lastno aplikacijo je italijanski <a href="https://www.tabaccoeditrice.it/">Tabacco</a>. Znan je predvsem po kartah Dolomitov ter Karnijskih in Julijskih Alp. 
 
-<h1 align="center">OruxMaps, Locus in Cartograph 2 maps</h1>
+<h1 align="center">OruxMaps, Locus, Avenza in Cartograph 2 maps</h1>
 <h3>Orux</h3>
-<p>OruxMaps je že desetletje švicarski nož kartografije za Android naprave in je oral ledino večine funkcionalnosti, ki jih imajo sedaj tudi "veliki" ponudniki - prikaz kartografskih podlag brez povezave, beleženje točk, beleženje točk s slikami in sledi ter prikaz/uvoz poti. Je popolnoma prilagodljiv tako za pohodnike kot kolesarje ter ostale športe na tleh in v zraku. Ena izmed njegovih prednosti je plošča na kateri sami izberemo koliko meritev/podatkov želimo videti. Orux nima trgovine kart za "one-click-purchase", vanj lahko uvozimo karkoli želimo - tudi spletne karte, kjer sami izbiramo območja brez povezave. S prenosom višinskih podatkov lahko vsak zemljevid prikažemo v 3D, s pomočjo izračuna poti v drugih aplikacijah (npr. Google maps) Orux uvozi in prikazuje traso, itd. Nudi tudi odčitavanje koordinat v različnih zapisih. <br>
-Skratka...Ni potrebna registracija, ne naročnina, nima trgovin, galerij, zbirk, zbiranja podatkov, reklam, itd. 
+<p>OruxMaps je že desetletje švicarski nož kartografije za Android naprave in je oral ledino večine funkcionalnosti, ki jih imajo sedaj tudi "veliki" ponudniki, ki jih takrat sploh še ni bilo - prikaz kartografskih podlag brez povezave, beleženje točk, beleženje točk s slikami in sledi ter prikaz/uvoz poti. Je popolnoma prilagodljiv tako za pohodnike kot kolesarje ter ostale športe na tleh in v zraku. Ena izmed njegovih prednosti je plošča na kateri sami izberemo koliko meritev/podatkov želimo videti. Orux nima trgovine kart za "one-click-purchase", vanj lahko uvozimo karkoli želimo - tudi spletne karte, kjer sami izbiramo območja brez povezave. S prenosom višinskih podatkov lahko vsak zemljevid prikažemo v 3D, s pomočjo izračuna poti v drugih aplikacijah Orux uvozi in prikazuje traso, itd. Nudi tudi odčitavanje koordinat v različnih zapisih. <br>
+Skratka...Ni potrebna registracija, ne naročnina, nima trgovin, galerij, zbirk, zbiranja podatkov, reklam, itd. Je zgolj in le kartografski program. In ravno to je mogoče razlog zakaj je tako priljubljen.
 </p>
 <img src="slike\azimut.jpg" height="600">
-<h5 >Predvsem pa nudi najbolj pomembno - prikaz lokacije in hitro analizo oddaljenosti in azimuta do željene točke. Brez navigacije in klikanja, zgolj s premikom karte izvemo razdaljo od stojišča pri Koči pri Krnskih jezerih do izbrane lokacije - 830m in smer 339 stopinj.</h5>
+<h5 >Predvsem pa nudi najbolj pomembno - prikaz lokacije in hitro analizo oddaljenosti in azimuta do željene točke. Brez navigacije in klikanja, zgolj s premikom karte izvemo razdaljo od stojišča pri Koči pri Krnskih jezerih do izbrane lokacije - 830m in smer 339 stopinj. Ali ima tudi Locus podobno? Da, vendar za točke (vrhove,...). Meni najljubša funkcija v zelo slabem vremenu in ponoči. Smer in razdalja kjerkoli, gibanje prilagajamo terenu.</h5>
+
+<img src="slike\navigacija.jpg" height="600">
+<p>Zloglasna navigacija v gorskem svetu. Locus (levo) uporablja lastno bazo, Orux zunanje ponudnike (graphhoper). Razlika? Locus (brezplačna verzija) potrebuje prenos podatkov, znotraj Oruxa z enim klikom prenesemo celotno bazo Graphhoperja (vir OSM) za Slovenijo in mobilni podatki niso potrebni. Prazen prostor na dnu Locusa je prostor, ki ga zasedajo reklame.</p>
 <br>
 
 <h3>Locus</h3>
-<p>Locus je proizvod podjetja in ne posameznika. Nudi podobne funkcionalnosti, a za višjo ceno ter z nakupi v aplikaciji. Za uporabnika, ki želi <b>tudi</b> rastrske PZS zemljevide je med boljšimi izbirami. Locus v svoji trgovini ponuja še več kart proizvajalcev Kompass, Freytag and Berndt, itd. Največja prednost pred OruxMaps je ravno v integraciji proizvajalcev, ki svojih izdelkov ne nudijo samostojno. Uporabnik je s tem "prisiljen" uporabljati aplikacijo, ki jo sicer mogoče ne bi.</p>
+<p>Locus je proizvod podjetja in ne posameznika. Nudi podobne funkcionalnosti, a za višjo ceno ter z nakupi v aplikaciji. Za uporabnika, ki želi <b>tudi</b> rastrske PZS zemljevide je med boljšimi izbirami. Locus v svoji trgovini ponuja še več kart proizvajalcev Kompass, Freytag and Berndt, itd. Največja prednost pred OruxMaps je ravno v integraciji proizvajalcev, ki svojih izdelkov ne nudijo samostojno. <b>Če šteje osebno mnenje - ni neke razlike z Oruxom oziroma je v nekaterih pogledih celo v prednosti. Go for it ampak kupite plačljivo verzijo, ker meni se je prvih nekaj mesecev do nakupa trgalo zaradi reklam :) </b></p>
+
+<h3>Avenza</h3>
+<p>je dokaj specifičen ponudnik, saj podpira le PDF format kart visoke kakovosti. Njihova trgovina je polna različnih vsebin - od zgodovinskih do tematskih kart. V njej je mogoče kupiti tako PZS karte kot Kartografije in Geodetskega inštituta Slovenije. Slabost? Če v trgovini ni karte vašega območja ste brez karte. Lahko imate sicer topografsko karto GURS merila 1:50.000, a brez označenih poti.</p>
 
 <h3>Apple IOS?</h3>
 <p>Dober nadomestek aplikacije OruxMaps je Cartograph 2 maps <a href="https://apps.apple.com/us/app/cartograph-2-maps/id1082995961"> Link </a>. Tudi vanjo lahko nameščamo mbtiles zemljevide po enakem postopku. </p>
@@ -96,9 +101,8 @@ Več o uporabljeni simbologiji Elevate 4 je dosegljivo v <a href="https://www.op
 </p>
 
 <img src="slike\krn.jpg" height="600">
-<p>Rezultat: območje Krna. Poti so prikazane glede na kategorijo težavnosti in ohranjenosti. OSM projekt uporablja švicarske <a href="https://www.bergfreunde.eu/alpine-grades-calculator/">SAC kategorije</a>. </p>
-<h3>Delo z Oruxmaps</h3>
-<p>Ima svoje prednosti in slabosti. Dobra novica je predvsem, da je na spletu dovolj priročnikov, debat in filmov o uporabi programa. Želite uvoziti GPX? Kliknite ikono "cesta" in naložite GPX. Kaj pa KML? Brez težav ampak najprej ga morate prekopirati v mapo oruxmaps\overlay ter nato v orodjih karte aktivirati nalaganje slojev. Malenkosti, ki vseeno zahtevajo čas za odkrivanje. </p>
+<p>Rezultat: območje Krna. Poti so prikazane glede na kategorijo težavnosti in ohranjenosti. OSM projekt uporablja švicarske <a href="https://www.bergfreunde.eu/alpine-grades-calculator/">SAC težavnostne kategorije</a>. </p>
+
 <h1>Druge karte?</h1>
 <p>Rastrske PZS karte lahko najlažje kupite in uvozite v Locus aplikaciji. Za Orux te možnosti uradno ni, saj PZS ne prodaja samostojnega digitalnega izdelka izven Locus/Avenza trgovine. Več na uradni strani <a href="https://www.pzs.si/novice.php?pid=11929">PZS in Locus</a>.</p>
 <p>Orux podpira ročni uvoz, priporočljiv je format mbtiles v katerem so lahko spravljene tako vektorske kot rastrske (papirnate) karte - npr. GURS zemljevidov v merilu 1:50.000. 
@@ -122,15 +126,25 @@ Več o uporabljeni simbologiji Elevate 4 je dosegljivo v <a href="https://www.op
 <h3>Maps.me</h3>
 <p>Še en derivat OpenStreetMap. Hiter in enostaven, resnično škoda, da vse poti prikazuje enako. Na sliki so mulatjera Zadnjica - Luknja, zahtevna pot preko Plemenic in ozka pot na Bovški Gamsovec.</p>
 <img src="slike\mapsme.jpg" height="600">
-<h3>Outdooractive</h3>
-<p>Kaj pa Outdooractive? Trenutno verjetno najbolj priročna plačljiva aplikacija za načrtovanje aktivnosti (30€ na leto). Njihova karta je derivat iz OpenStreetMap podatkov, kar pomeni, da imamo v Oruxu iste podatke - zastonj. Njihov plan temelji na načrtovanju (višinski profili, izračun poti med točko A in B), itd. Za 60€ letno vam nudijo še dostop do kart planinskih organizacij OAV, DAV, KOMPASS, ADFC, Harvey ampak ne PZS.</p>
-<p>Velika prednost Slovenije je spletna stran Hribi.net, kjer brezplačno domujejo opisi poti, slike in trase. Povsem samostojno imamo tako na razpolago bogato zbirko informacij brez, da bi se rabili zavezati določeni aplikaciji. </p>
-<p>Slabost? Outdooractive in podobni so z leti res dobro razvili sistem načrtovanja aktivnosti. </p>
+
+<h3>Mapy.cz</h3>
+<p>Še en derivat OpenStreetMap. Hiter in enostaven, kategorizacija določenih poti ter nabor izletov in točk. </p>
+<img src="slike\mapy.jpg" height="600">
 
 <h3>Tabacco</h3>
 
 <p>Ena izmed redkih kartografskih hiš z lastno aplikacijo za nakup in uporabo njihovih digitalnih kart. Za razliko od PZS prodajajo kvadrante.</p>
 <img src="slike\tabacco.jpg" height="600">
+
+
+<h3>Outdooractive, Bergfex, Komoot,...</h3>
+<p>Kaj pa Outdooractive in ostali načrtovalniki? Trenutno je verjetno najbolj priročna plačljiva aplikacija za načrtovanje aktivnosti (30€ na leto). Njihova karta je derivat iz OpenStreetMap podatkov, kar pomeni, da imamo v Oruxu iste podatke - zastonj. Njihov plan temelji na načrtovanju (višinski profili, izračun poti med točko A in B), itd. Za 60€ letno vam nudijo še dostop do kart planinskih organizacij OAV, DAV, KOMPASS, ADFC, Harvey ampak ne PZS. Že ime Bergfex karte "Bergfex OSM" pove, da gre za isto stvar kot v oruxu/locusu. Bergfex v zastonjski različici prikazuje tudi topografske karte Avstrije ter nudi prenos izbranih območij. Seveda je paradni konj vseh aplikacij njihova galerija izletov in tur.</p>
+
+<p>Outdooractive in podobni so z leti res dobro razvili sistem načrtovanja aktivnosti. Da se razume - so odlične aplikacije in preproste za uporabo ter dokaz, da so osnova digitalne revolucije podatki. Praktično vsi uporabljajo enake in izkušnjo gradijo na drugih funkcionalnostih.</p>
+
+<p>Velika prednost Slovenije je spletna stran Hribi.net, kjer brezplačno domujejo opisi poti, slike in trase. Sicer ni vsega in se zdi, da je stran včasih zamrla ampak po popularnosti so med slovenskimi planinci verjetno na prvem mestu. Samostojno imamo tako na razpolago razmeroma bogato zbirko informacij brez, da bi se rabili zavezati določeni aplikaciji.</p>
+
+
 
 
 
