--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ div {
 Skratka...Ni potrebna registracija, ne naročnina, nima trgovin, galerij, zbirk, zbiranja podatkov, reklam, itd. Je zgolj in le kartografski program. In ravno to je mogoče razlog zakaj je tako priljubljen.
 </p>
 <img src="slike\azimut.jpg" height="600">
-<h5 >Predvsem pa nudi najbolj pomembno - prikaz lokacije in hitro analizo oddaljenosti in azimuta do željene točke. Brez navigacije in klikanja, zgolj s premikom karte izvemo razdaljo od stojišča pri Koči pri Krnskih jezerih do izbrane lokacije - 830m in smer 339 stopinj. Ali ima tudi Locus podobno? Da, vendar za točke (vrhove,...). Meni najljubša funkcija v zelo slabem vremenu in ponoči. Smer in razdalja kjerkoli, gibanje prilagajamo terenu.</h5>
+<h5 >Predvsem pa nudi najbolj pomembno - prikaz lokacije in hitro analizo oddaljenosti in azimuta do željene točke. Brez navigacije in klikanja, zgolj s premikom karte izvemo razdaljo od stojišča pri Koči pri Krnskih jezerih do izbrane lokacije - 830m in smer 339 stopinj. Ali ima tudi Locus podobno? Da, vendar za točke (vrhove,...). Meni najljubša funkcija v zelo slabem vremenu, ponoči ali pri preverjanju razdalje do naslednjega razpotja. Smer in razdalja kjerkoli.</h5>
 
 <img src="slike\navigacija.jpg" height="600">
 <p>Zloglasna navigacija v gorskem svetu. Locus (levo) uporablja lastno bazo, Orux zunanje ponudnike (graphhoper). Razlika? Locus (brezplačna verzija) potrebuje prenos podatkov, znotraj Oruxa z enim klikom prenesemo celotno bazo Graphhoperja (vir OSM) za Slovenijo in mobilni podatki niso potrebni. Prazen prostor na dnu Locusa je prostor, ki ga zasedajo reklame.</p>
