--- a/index.html
+++ b/index.html
@@ -31,10 +31,14 @@ div {
 <p style="color: red" align="center"><i><b>Karta (digitalna ali papirnata) je pripomoček in ne slepa navigacija. Pri uporabi vedno uporabljate zdravo pamet in se ne podajajte v nevarne situacije.</b></i></p>
 
 <p>Planinskih/outdoor/aktivnih aplikacij je danes malo morje zato je odločitev o izbiri kar težka. Sploh, če je aplikacija plačljiva na mesečni ravni. Spodnji zapis je nastal na podlagi izkušenj zadnjega desetletja, predvsem z namenom kartiranja in uporabe lastnih zemljevidov v času, ko aplikacije še niso bile tako razvite kot danes. Posameznik lahko testira le nekaj aplikacij, zato tu vsekakor niso zbrane vse ali celo enakovredno predstavljene.<br>
+<br>
+<b>Sledi markaciji, če jih ni se vrni nazaj?</b>
+<p>Ja, ne bo šlo. Niso vse poti markirane planinske poti in seveda - niso vse aktivnosti, planinske aktivnosti. Veliko vrhov nima markiranih planinskih poti, čeprav poti ali celo grajene 2m široke mulatjere s predori obstajajo. Nekaj obiskanih primerov - Veliki Draški vrh, Krnčica, Zadnjiški Ozebnik, Grušnica, ... Včasih gremo tudi kam drugam kot na vrh in na izletu okrog Snežnika, gor in dol preko prelaza Vršič, po poteh ozkotirne železnice v Idrijo ali po Juliani karta ter osnove orientacije pridejo kar prav. Kaj je prednost digitalne pred papirnato? Zoom, zoom, zoom. Večinoma so podatki zajeti v merilu 1:1000, na papirju so v najboljšem primeru 1:25.000. Seveda nam GPS na papirju ne kaže lokacije in ni ga junaka, ki bo v megli sredi gozda na Javornikih jamčil na papirju za lastno lokacijo. Lep primer je bivakiranje skupine Tržačanov okrog 2015 v bližini koče na Snežniku, ker jih je ujelo slabo vreme in niso vedeli kje je gor in kje dol, kaj šele kje je koča. Shit happens in takrat je lepo biti založen z vsem. Tudi s toplimi oblačili med poletjem.</p>
 
 <h3>PZS in podatki</h3>
 <p>Planinska zveza Slovenije pri nas vodi evidenco <b>uradnih</b> planinskih poti ter prodaja papirnate in digitalne planinske zemljevide. V digitalni sferi so njihovi izdelki najbolje integrirani v aplikacije Locus in Avenza.</p>
 <p>Seveda je virov kartografskih podlag več, ena izmed takšnih baz je OpenStreetMap, ki je zaradi načela odprokodnosti in odprtih podatkov dostopen vsem - zastonj. Ravno zaradi tega je osnovni vir praktično vseh, plačljivih in brezplačnih aplikacij. OSM urejajo prostovoljci, ki zgolj sledijo smernicam kako morajo biti podarki vrisani in urejeni. Predvsem je pomembna ena stvar - več prostovoljcev, ki bo (kvalitetno) urejalo OSM zbirko <b>boljši bodo podatki v vseh aplikacijah.</b> Tudi pot na Triglav je moral nekdo vrisati in s pojavom lidar posnetkov je to že stvar natančnosti pol metra ali manj.</p> 
+
 <p>Nekateri ponudniki njihove podatke oplementijo tudi lastnimi ali drugimi bazami - npr. z vremenskimi podatki, spet drugi stavijo na galerijo poti/izletov, ki jih nalagajo uporabniki. </p>
 
 <p>Ali obstaja možnost navigacije po planinskih poteh? Da. Vendar jo večina planinskih organizacij odsvetuje pri uporabi na terenu. Skoraj vse aplikacije nudijo funkcijo načrtovanja in izračuna poti med točko A in B na zemljevidu. Dodana vrednost je 3d profil.</p>
@@ -144,8 +148,8 @@ Več o uporabljeni simbologiji Elevate 4 je dosegljivo v <a href="https://www.op
 
 <p>Velika prednost Slovenije je spletna stran Hribi.net, kjer brezplačno domujejo opisi poti, slike in trase. Sicer ni vsega in se zdi, da je stran včasih zamrla ampak po popularnosti so med slovenskimi planinci verjetno na prvem mestu. Samostojno imamo tako na razpolago razmeroma bogato zbirko informacij brez, da bi se rabili zavezati določeni aplikaciji.</p>
 
-
-
+<h1>Imena vrhov?</h1>
+<p>Ga ni preko Peak finder aplikacije. <a href="https://www.peakfinder.org/en/mobile">LINK</a></p>
 
 
 <br>
